# swagger_output.json
@@ -5,11 +5,20 @@
     "title": "REST API",
     "description": ""
   },
-  "host": "localhost:3000",
+  "host": "localhost:3002",
   "basePath": "/",
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "ApiKeyAuth": {
+      "name": "jwt_token",
+      "in": "header",
+      "type": "apiKey",
+      "description": "JWT Token header"
+    }
+  },
+  "security": [ { "ApiKeyAuth": [] } ],
   "paths": {
     "/suppliers/findAll": {
       "get": {
